test/types/sync/ferguson/sync-shared-nilable.good
sync-shared-nilable.chpl:3: error: sync/single types cannot contain type 'shared C?'
