test/types/sync/ferguson/sync-shared-nilable.chpl
class C { var x: int; }

var x: sync shared C?;
